# noctura-screensaver

./: .gitignore  LICENSE  README.md  index.html  package.json
.github/workflows/: ci.yml
docs/: DRIFT_FLUX_RESEARCH.md  README.md
docs/architecture/: activation-flow.md  scene-contract.md  system-overview.md
native-saver/: Info.plist  README.md  build.sh  flux-capture.swift  gpu-time-check.swift  icon-gen.swift  render-real.swift  render-scenes.swift  shader-check.swift  swarm-capture.swift  verify-load.swift
native-saver/Sources/: AuroraFluxFluid.swift  AuroraParticleSwarm.swift  AuroraRenderer.swift  AuroraShader.swift  AuroraView.swift  Preferences.swift
native-saver/packaging/: Install-Noctura.command  README.txt  Uninstall-Noctura.command
scripts/: capture-drift.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  power.rs
src/engine/: Renderer.test.ts  Renderer.ts  SceneManager.test.ts  SceneManager.ts  palette.test.ts  palette.ts  sceneParams.ts  types.ts
src/power/: powerSource.ts
src/scenes/: AmbientGradient.test.ts  AmbientGradient.ts  AuroraRibbons.ts  BlackHole.ts  Caustics.ts  Drift.ts  Fireflies.ts  FlowingParticles.ts  FractalBloom.ts  FullscreenScene.ts  Nebula.ts  (+10 more)
windows-saver/: Cargo.toml  README.md  build-cross.sh
windows-saver/.cargo/: config.toml
windows-saver/packaging/: Install-Noctura.bat  README.txt  Uninstall-Noctura.bat
windows-saver/src/: config.rs  flux.hlsl  gfx.rs  log.rs  main.rs  particles.hlsl  settings.rs  shader.hlsl
(+15 files in other folders)
